examples/test/testpolicy15814.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15814
  namespace: namespace341
spec:
  podSelector:
    matchLabels:
      key2: value11
      key25: value37
      key13: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value21
          key35: value47
      podSelector:
        matchLabels:
          key47: value45
          key6: value15
